--- a/cv.tex
+++ b/cv.tex
@@ -29,18 +29,18 @@
 		\item \textbf {Graphics team:}
 		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 		    \item Debugging in both user and kernel space;
-		    \item Conception of the new virtualized powerHAL for Android 5.1;
+		    \item Design of the new virtualized powerHAL for Android 5.1;
 		    \item Studying how to handle GPU and display hardware of an Intel processor into two different virtual machines (One under QNX 6.5, the other one under Linux (AGL)):
 		    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 			\item Creation of a Linux distribution from scratch using Build Root to start the project;
-			\item Integratration of Intel Linux distribution using Yocto;
+			\item Integration of Intel Linux distribution using Yocto;
 			\item Studying Linux kernel drivers and documentation to understand the Intel Gen 9 Graphics technology;
 			\item Modification of Intel's Linux Kernel drivers;
 		    \end{itemize}
 		    \item Participating on porting the graphics virtualization solution from Android to QNX 7.0:
 		    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 			\item Studying the feasibility on QNX 6.6;
-			\item Conception of the new Graphics Buffer Allocator;
+			\item Design and implementation of the new Graphics Buffer Allocator;
 			\item Integration of the whole development.
 		    \end{itemize}
 		\end{itemize}
@@ -111,7 +111,7 @@
 		    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 			\item Writing tools in order to handle a web server located on a smart card.
 			    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-				\item Conception of a BIP \textless==\textgreater TCP/IP gateway in Java/J2Me ;
+				\item Design of a BIP \textless==\textgreater TCP/IP gateway in Java/J2Me ;
 				\item Implementation of a JSP like engine that generate JavaCard code;
 				\item Implementation of test applets.
 			    \end{itemize}
@@ -123,7 +123,7 @@
     \begin{unbreakableExperience}{June 2009}{September 2009}{Internship}{Research lab of ESEO}{Angers}{France}
 	\begin{subexperience}
 	    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-		\item Study of NFC protocol. Conception of a demonstrator containing a phone and a NFC reader.
+		\item Study of NFC protocol. Design of a demonstrator containing a phone and a NFC reader.
 	    \end{itemize}
 	\end{subexperience}
     \end{unbreakableExperience}
@@ -137,9 +137,9 @@
 \begin{unbreakableSection} {Personal projects}
     \begin{projects}
 	\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-	    \item \href{https://github.com/grassead/snesemu}{Conception of a Super Nintendo emulator in C}
-	    \item \href{https://github.com/grassead/sudokusolver}{Conception of a Sudoku Solver in C++}
-	    \item \href{https://github.com/grassead/memorychecker}{Conception of a Memory Allocation checker in C}
+	    \item \href{https://github.com/grassead/snesemu}{Design of a Super Nintendo emulator in C}
+	    \item \href{https://github.com/grassead/sudokusolver}{Design of a Sudoku Solver in C++}
+	    \item \href{https://github.com/grassead/memorychecker}{Design of a Memory Allocation checker in C}
 	\end{itemize}
     \end{projects}
 \end{unbreakableSection}
