[UPDATE] Add new experience (Smile)

--- a/cv.tex
+++ b/cv.tex
@@ -20,10 +20,21 @@
     Github: \url{https://github.com/grassead}}
 \end {identity}
 
-\title {Embedded software engineer (Android/Linux/QNX)}
+\title {Embedded software engineer - Android Platform / Linux / Virtualisation}
 
 \begin{section} {Work experience}
-    \begin{experience}{May 2015}{Present}{Embedded virtualization engineer}{RedBend}{Saint-Quentin-en-Yvelines}{France}
+    \begin{experience}{February 2017}{Present}{Technical Expert}{Smile Open Source Solutions}{Asni\`{e}res-sur-Seine}{France}
+    \begin{subexperience}
+    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+		\item \textbf {Software architecture:}
+		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+		\item Graphics and Virtualization architect in a project involving two virtual machines with display sharing.
+		\end{itemize}
+	\end{itemize}
+	\end{subexperience}
+	\end{experience}
+
+    \begin{experience}{May 2015}{January 2017}{Senior embedded virtualization engineer}{RedBend}{Saint-Quentin-en-Yvelines}{France}
 	\begin{subexperience}
 	    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 		\item \textbf {Graphics team:}
@@ -140,6 +151,7 @@
 	    \item \href{https://github.com/grassead/snesemu}{Design of a Super Nintendo emulator in C}
 	    \item \href{https://github.com/grassead/sudokusolver}{Design of a Sudoku Solver in C++}
 	    \item \href{https://github.com/grassead/memorychecker}{Design of a Memory Allocation checker in C}
+	    \item \href{https://github.com/grassead/cv}{Up-to-date resume}
 	\end{itemize}
     \end{projects}
 \end{unbreakableSection}
@@ -164,6 +176,7 @@
 	    \item QNX
 	    \item V4L2
 	    \item Virtualisation
+	    \item Wayland
 	    \item Yocto
 	\end{itemize}
     \end{skills}
