[DEV] Add linkedin link

--- a/cv.tex
+++ b/cv.tex
@@ -17,7 +17,8 @@
     \contact {\personalAddress \linebreak
     \personalPhoneNumber, \href{mailto:\personalMail}{\personalMail}\linebreak
     Nationality: French\linebreak
-    Github: \url{https://github.com/grassead}}
+    Github: \url{https://github.com/grassead}\linebreak
+    LinkedIn: \url{\personalLinkedin}}
 \end {identity}
 
 \title {Embedded software engineer - Android Platform / Linux / Virtualisation}
