[UPDATE] Change title

--- a/cv.tex
+++ b/cv.tex
@@ -21,7 +21,7 @@
     LinkedIn: \url{\personalLinkedin}}
 \end {identity}
 
-\title {Embedded software engineer - Android Platform / Linux / Virtualisation}
+\title {Embedded software engineer - Android / Graphics / Virtualisation}
 
 \begin{section} {Work experience}
     \begin{experience}{February 2017}{Present}{Technical Expert}{Smile Open Source Solutions}{Asni\`{e}res-sur-Seine}{France}
