[UPDATE] Add new subexperience

--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,8 @@
     \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 		\item \textbf {Software architecture:}
 		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-		\item Graphics and Virtualization architect in a project involving two virtual machines with display sharing.
+		\item Graphics and Virtualization architect for a project involving two virtual machines with display sharing.
+		\item Risk mitigation expert for a project displaying up to five video stream on an imx.6qp based board using gstreamer.
 		\end{itemize}
 	\end{itemize}
 	\end{subexperience}
