--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
     }
 \end {identity}
 
-\title {Embedded software engineer - Android / Graphics / Virtualisation}
+\title {Senior embedded software engineer}
 
 \begin{section} {Work experience}
     \begin{experience}{February 2017}{Present}{Technical Expert}{Smile Open Source Solutions}{Asni\`{e}res-sur-Seine}{France}
@@ -37,14 +37,26 @@
     \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 		\item \textbf {Software architecture:}
 		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-		\item Graphics and Virtualization architect for a project involving two virtual machines with display sharing;
-		\item Risk mitigation expert for a project displaying up to five video stream on an imx.6qp based board using gstreamer;
-		\item Reworking the whole Android porting of the company;
+			\item Designing several products under Android (payment terminal / camera / respirator / etc);
+			\item Debugging low level problems;
+			\item Porting Android on several boards;
 		\end{itemize}
 		\item \textbf {Technical Leader:}
 		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-		\item Writing technical answer to several calls of tenders;
-		\item Internship supervision.
+			\item Internship supervision;
+			\item Team technical supervision for some projects;
+		\end{itemize}
+		\item \textbf {Training/Talks:}
+		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+			\item Maintaining and giving Android AOSP training;
+			\item Giving talks to some conferences about Android internals / ARM Architecture);
+		\end{itemize}
+		\item \textbf {Customer facing:}
+		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+			\item Pre-sales for Smile ECS (About Android OS / Linux / Video);
+			\item Writing technical answer to several calls for tenders;
+			\item Helping customers to face their technical problems;
+			\item Many business trips around France;
 		\end{itemize}
 	\end{itemize}
 	\end{subexperience}
@@ -111,7 +123,7 @@
 				    \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 					\item Contiguous Memory Allocator;
 					\item Android ION;
-					\item Android synchronisation mechanism (Fences);
+					\item Android synchronization mechanism (Fences);
 					\item Modification from Samsung for V4L2 framework;
 					\item Integration of ARM Mali (GPU) driver and userspace
 				    \end{itemize}
@@ -175,31 +187,35 @@
 \begin{section} {Skills}
     \begin{skills}
 	\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-	    \item Android Porting
-	    \item Android Framework
-	    \item Android Application
-	    %\item ARM Mali
-	    \item Build Root
-	    \item C/C++
+	    \item Android (Porting / Framework / Application)
+		\item ARM Architecture
+	    \item Build Root / Yocto
+	    \item C/C++/Java/Kotlin
+	    \item Continuous Integration
 	    \item GIT
-	    \item Intel Gen 9 Graphics
-	    %\item Java, J2Me, JavaCard
-	    \item Java
-	    \item Latex
-	    \item Linux Kernel Driver Development
-	    \item Linux Kernel Contiguous memory management
+	    \item Linux Kernel
 	    \item OMX
 	    \item OpenGL ES
-	    \item QNX
-	    \item V4L2
-	    \item Virtualisation
-	    \item Wayland
-	    \item Yocto
+	    \item Virtualization
 	\end{itemize}
     \end{skills}
 \end{section}
 
-\begin{section} {Langages}
+\begin{section} {Talks}
+    \begin{skills}
+	\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+	    \item Embedded SEC 18: Android Security mechanism.
+	    \item Embedded SEC 19: ARM Pointer Authentication
+	    \item Embedded SEC 19: What is virtualization ?
+	    \item Capitol Du Libre: Android: Free or proprietary ?
+	    \item Android Makers 2018: Android JVM optimizations;
+	    \item Android Makers 2019: Android Sandboxing;
+	    \item Various internal events: ARM Architecture (Pauth / big.LITTLE / Virt / ISA / etc).
+	\end{itemize}
+    \end{skills}
+\end{section}
+
+\begin{section} {Languages}
     \begin{languages}
 	\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 	    \item French: Native speaker
