--- a/cv.tex
+++ b/cv.tex
@@ -30,7 +30,7 @@
     }
 \end {identity}
 
-\title {Senior embedded software engineer}
+\title {Senior embedded software engineer (Android / Linux Kernel)}
 
 \begin{section} {Work experience}
     \begin{experience}{February 2017}{Present}{Technical Expert}{Smile Open Source Solutions}{Asni\`{e}res-sur-Seine}{France}
