--- a/cv.tex
+++ b/cv.tex
@@ -166,12 +166,11 @@
 	\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 	    \item Android (Porting / Framework / Application)
 		\item ARM Architecture
-	    \item Build Root / Yocto
+	    \item Buildroot / Yocto
 	    \item C/C++/Java/Kotlin
 	    \item Continuous Integration
 	    \item GIT
 	    \item Linux Kernel
-	    \item OMX
 	    \item OpenGL ES
 	    \item Virtualization
 	\end{itemize}
