add OSS contribution

--- a/cv.tex
+++ b/cv.tex
@@ -153,6 +153,26 @@
 \begin{unbreakableSection} {Personal projects}
     \begin{projects}
 	\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+		\item Contributions to the Linux Kernel:
+		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+			\item \href{https://git.kernel.org/pub/scm/linux/kernel/git/next/linux-next.git/commit/drivers/gpu/drm/bridge/lontium-lt8912b.c}{Maintainer of a DRM compliant driver for the LT8912B MIPI-DSI to HDMI converter};
+			\item \href{https://git.kernel.org/pub/scm/linux/kernel/git/next/linux-next.git/tree/arch/arm64/boot/dts/freescale/imx8mm-nitrogen-r2.dts}{Maintainer of the Nitrogen 8M Mini board};
+			\item Several contributions to a driver for a regulator.
+		\end{itemize}
+		\item Contribution to QEMU:
+			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+				\item \href{https://git.qemu.org/?p=qemu.git;a=commit;h=de0b1bae6461f67243282555475f88b2384a1eb9}{Fix a bug in ARM PAuth implementation}
+			\end{itemize}
+		\item Contribution to Android AOSP:
+			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+				\item \href{https://android.googlesource.com/platform/bootable/recovery/+/3cd669f\%5E\%21/}{Fix compilation when not using EXT4 as FS}
+			\end{itemize}
+		\item Contribution to BoundaryDevices Android:
+			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+				\item \href{https://github.com/boundarydevices/android_device_boundary/commit/5d4536c4e4a35cdf6aad2fa1572f59d4ee6080ca}{Fix bad information at compile time}
+				\item \href{https://github.com/boundarydevices/android_device_boundary/commit/0f9980203a72c30999acde465490d2353d37015d}{Fix build dependencies for DTBO}
+				\item \href{https://github.com/boundarydevices/android_device_boundary/commit/2621cd90aaad4d59327a47074963e2b1cfa9c9cc}{Fix build dependencies for preboot image}
+			\end{itemize}
 	    \item \href{https://github.com/grassead/snesemu}{Design of a Super Nintendo emulator in C}
 	    \item \href{https://github.com/grassead/sudokusolver}{Design of a Sudoku Solver in C++}
 	    \item \href{https://github.com/grassead/memorychecker}{Design of a Memory Allocation checker in C}
