--- a/cv.tex
+++ b/cv.tex
@@ -30,7 +30,7 @@
     }
 \end {identity}
 
-\title {Senior embedded software engineer (Android / Linux Kernel)}
+\title {Senior embedded software engineer (Android low level / Linux Kernel)}
 
 \begin{section} {Work experience}
     \begin{experience}{February 2017}{Present}{Technical Expert}{Smile Open Source Solutions}{Asni\`{e}res-sur-Seine}{France}
@@ -167,11 +167,15 @@
 			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 				\item \href{https://android.googlesource.com/platform/bootable/recovery/+/3cd669f\%5E\%21/}{Fix compilation when not using EXT4 as FS}
 			\end{itemize}
-		\item Contribution to BoundaryDevices Android:
+		\item Contributions to BoundaryDevices Android:
 			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 				\item \href{https://github.com/boundarydevices/android_device_boundary/commit/5d4536c4e4a35cdf6aad2fa1572f59d4ee6080ca}{Fix bad information at compile time}
 				\item \href{https://github.com/boundarydevices/android_device_boundary/commit/0f9980203a72c30999acde465490d2353d37015d}{Fix build dependencies for DTBO}
 				\item \href{https://github.com/boundarydevices/android_device_boundary/commit/2621cd90aaad4d59327a47074963e2b1cfa9c9cc}{Fix build dependencies for preboot image}
+			\end{itemize}
+		\item Contribution to Buildroot:
+			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+				\item \href{https://git.busybox.net/buildroot/commit/?id=c2cdde4887500ca809ab52ff75d22afdb3c1168d}{Fix QEMU package}
 			\end{itemize}
 	    \item \href{https://github.com/grassead/snesemu}{Design of a Super Nintendo emulator in C}
 	    \item \href{https://github.com/grassead/sudokusolver}{Design of a Sudoku Solver in C++}
