Update CV for NX exp

--- a/cv.tex
+++ b/cv.tex
@@ -30,10 +30,31 @@
     }
 \end {identity}
 
-\title {Senior embedded software engineer (Android low level / Linux Kernel)}
+\title {Senior embedded software engineer (Bare metal - Linux Kernel)}
 
 \begin{section} {Work experience}
-    \begin{experience}{February 2017}{Present}{Technical Expert}{Smile Open Source Solutions}{Asni\`{e}res-sur-Seine}{France}
+    \begin{experience}{September 2021}{Present}{Low Level Software Engineer}{NanoXplore SAS}{S\`{e}vres}{France}
+     \begin{subexperience}
+		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+			\item Tools:
+				\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+					\item Writing configuration for openocd for the NX SoC;
+					\item Evaluating OpenTitan for regmap generation.
+				\end{itemize}
+			\item Bare Metal development:
+				\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+					\item Writing apps for testing purpose;
+					\item Writing helpers to ease the development.
+				\end{itemize}
+			\item Specification:
+				\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+					\item Specifying boot sequence of a new SoC.
+				\end{itemize}
+		\end{itemize}
+	\end{subexperience}
+	\end{experience}
+
+    \begin{experience}{February 2017}{August 2021}{Technical Expert}{Smile Open Source Solutions}{Asni\`{e}res-sur-Seine}{France}
     \begin{subexperience}
     \begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 		\item \textbf {Software architecture:}
