--- a/cv.tex
+++ b/cv.tex
@@ -38,7 +38,8 @@
 		\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 			\item Tools:
 				\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-					\item Writing configuration for openocd for the NX SoC;
+					\item Writing configuration for OpenOCD for our custom SoC;
+					\item Writing scripts to program NOR Flash via OpenOCD;
 					\item Evaluating OpenTitan for regmap generation.
 				\end{itemize}
 			\item Bare Metal development:
@@ -198,10 +199,17 @@
 			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
 				\item \href{https://git.busybox.net/buildroot/commit/?id=c2cdde4887500ca809ab52ff75d22afdb3c1168d}{Fix QEMU package}
 			\end{itemize}
+		\item Contribution to OpenOCD:
+			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+				\item \href{https://review.openocd.org/c/openocd/+/6787}{Add config file for the NXP LPC55S69 microcontroller}
+			\end{itemize}
+		\item Contribution to OpenTitan:
+			\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
+				\item \href{https://github.com/lowRISC/opentitan/pull/9251}{Fix IP creation script}
+			\end{itemize}
 	    \item \href{https://github.com/grassead/snesemu}{Design of a Super Nintendo emulator in C}
 	    \item \href{https://github.com/grassead/sudokusolver}{Design of a Sudoku Solver in C++}
 	    \item \href{https://github.com/grassead/memorychecker}{Design of a Memory Allocation checker in C}
-	    \item \href{https://github.com/grassead/cv}{Up-to-date resume}
 	\end{itemize}
     \end{projects}
 \end{unbreakableSection}
@@ -209,14 +217,13 @@
 \begin{section} {Skills}
     \begin{skills}
 	\begin{itemize}[parsep=0cm,itemsep=0cm,topsep=0cm]
-	    \item Android (Porting / Framework / Application)
-		\item ARM Architecture
-	    \item Buildroot / Yocto
+	    \item ARM Architecture (A/M/R)
+	    \item Android / Buildroot / Yocto
 	    \item C/C++/Java/Kotlin
 	    \item Continuous Integration
 	    \item GIT
 	    \item Linux Kernel
-	    \item OpenGL ES
+	    \item Lauterbach / OpenOCD
 	    \item Virtualization
 	\end{itemize}
     \end{skills}
